@@ -7,15 +7,18 @@ import com.finsight.backend.dto.response.*;
 import com.finsight.backend.mapper.DetailHoldingsMapper;
 import com.finsight.backend.mapper.HoldingsMapper;
 import com.finsight.backend.mapper.NewsMapper;
+import com.finsight.backend.tradeserverwebsocket.service.EtfPriceService;
 import com.finsight.backend.vo.Fund;
 import com.finsight.backend.vo.NewsVO;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
 @Component
@@ -24,6 +27,9 @@ public class FundDtoHandler implements ProductDtoHandler<Fund> {
     private final NewsMapper newsMapper;
     private final HoldingsMapper holdingsMapper;
     private final DetailHoldingsMapper detailHoldingsMapper;
+    private final EtfPriceService etfPriceService;
+
+    private static Map<String, Supplier<List<FundByFilterDto>>> SORT_HANDLERS;
     @Override
     public Class<Fund> getProductType() {
         return Fund.class;
@@ -39,14 +45,27 @@ public class FundDtoHandler implements ProductDtoHandler<Fund> {
     }
 
     @Override
-    public List<ProductByFilterDto> toFilterDto(List<Fund> product, String userId) {
-        return product.stream()
+    public List<ProductByFilterDto> toFilterDto(List<Fund> product, String userId, String sort) {
+        List<FundByFilterDto> fundByFilterDtoList = product.stream()
                 .map((Fund fund) -> FundByFilterDto.fundVoToFundByFilterDto(fund,
                         newsSentimentPer(newsMapper.findNewsSentimentByProductCode(fund.getProductCode())),
                         holdingsMapper.existProductByUserIdAndProductCode(userId, fund.getProductCode()),
-                        detailHoldingsMapper.isProductWatched(userId, fund.getProductCode()))
+                        detailHoldingsMapper.isProductWatched(userId, fund.getProductCode()),
+                        etfPriceService.getPercentChangeFrom3MonthsAgo("fund_aum", fund.getProductCode()),
+                        etfPriceService.getCurrent("fund_aum", fund.getProductCode()))
                 )
-                .collect(Collectors.toList());
+                .toList();
+        SORT_HANDLERS = Map.of(
+                "rate_of_return", () -> fundByFilterDtoList.stream()
+                        .sorted(Comparator.comparing(FundByFilterDto::getProductRateOfReturn).reversed())
+                        .toList(),
+                "fund_scale", () -> fundByFilterDtoList.stream()
+                        .sorted(Comparator.comparing(FundByFilterDto::getFundScale).reversed())
+                        .toList()
+        );
+        return SORT_HANDLERS.get(sort).get().stream()
+                .map(fund -> (ProductByFilterDto) fund)
+                .toList();
     }
     public NewsSentimentDto newsSentimentPer(List<String> newsSentimentList){
         Map<String, Long> sentimentCnt = newsSentimentList.stream()
